[gd_scene load_steps=3 format=3 uid="uid://m6e5bhijlri7"]

[ext_resource type="Script" uid="uid://ubtsik6sa132" path="res://WorkRoom.gd" id="1_foh2e"]

[sub_resource type="LabelSettings" id="LabelSettings_leytu"]
font_size = 36

[node name="WorkRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_foh2e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.31431612, 0.31431612, 0.3143161, 1)

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 29.0
offset_right = 897.0
offset_bottom = 79.0
text = "Деньги: 0 | Энергия: 100"
label_settings = SubResource("LabelSettings_leytu")

[node name="WorkButton" type="Button" parent="."]
layout_mode = 0
offset_left = 601.0
offset_top = 335.0
offset_right = 745.0
offset_bottom = 366.0
text = "РАБОТАТЬ (2 сек)"

[node name="HomeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 604.0
offset_top = 526.0
offset_right = 746.0
offset_bottom = 557.0
text = "Домой (Верстак)"
